# family-assistant

./: .gitignore  Makefile  README.md  ai_context_monitoring_tasks.txt  ai_context_web_search.txt  ai_safety_sandbox.txt  alembic.ini  package-lock.json  pyproject.toml
docs/: DATA_MODEL.md
python/: main.py
python/api/: __init__.py  auth.py  config.py  crypto.py  db.py  main.py  storage.py
python/api/ai/: __init__.py  agent.py  agent_drain.py  assistants.py  authz.py  chat_prompts.py  enrollment.py  face.py  family_qa_router.py  fast_ack.py  ollama.py  planner.py  prompts.py  rag.py  schema_catalog.py  sensitive_intent.py  session.py  sql_tool.py  tools.py  tts.py  vision.py  web_search_shortcut.py
python/api/integrations/: __init__.py  doorbird_gate.py  gemini.py  gmail.py  google_calendar.py  google_drive.py  google_oauth.py  telegram.py  twilio_sms.py  web_search.py
python/api/migrations/: README  env.py
python/api/models/: __init__.py  _mixins.py  address.py  agent_task.py  assistant.py  document.py  email_inbox_message.py  face_embedding.py  family.py  financial_account.py  goal.py  google_oauth_credential.py  identity_document.py  insurance_policy.py  job.py  live_session.py  live_session_message.py  live_session_participant.py  medical_condition.py  medication.py  person.py  person_photo.py  person_relationship.py  pet.py  pet_photo.py  physician.py  residence.py  residence_photo.py  sensitive_identifier.py  sms_inbox_message.py  task.py  telegram_contact_verification.py  telegram_inbox_message.py  telegram_invite.py  vehicle.py
python/api/routers/: addresses.py  agent_tasks.py  ai_chat.py  ai_face.py  ai_tts.py  assistants.py  auth.py  documents.py  families.py  financial_accounts.py  goals.py  google.py  identity_documents.py  insurance_policies.py  jobs.py  landing.py  legal.py  live_sessions.py  media.py  medical_conditions.py  medications.py  people.py  person_photos.py  person_relationships.py  pet_photos.py  pets.py  physicians.py  residence_photos.py  residences.py  sensitive_identifiers.py  sms_webhook.py  spa.py  status.py  tasks.py  vehicles.py
python/api/schemas/: __init__.py  _base.py  address.py  assistant.py  document.py  family.py  financial_account.py  goal.py  identity_document.py  insurance_policy.py  job.py  live_session.py  medical_condition.py  medication.py  person.py  person_photo.py  person_relationship.py  pet.py  pet_photo.py  (+8 more)
scripts/: bootstrap_from_filesystem.py  db_backup.sh  db_backup_to_gdrive.py  db_restore.sh  deploy.sh  ensure_services.sh  register_daemons.sh  restart.sh  run_tests.sh  start.sh  stop.sh  unregister_daemons.sh
scripts/ai_training/: 1_dump_corpus.py  2_build_sft_dataset.py  3_fine_tune.sh  4_update_base_model.sh  README.md  config.yaml
scripts/lib/: common.sh
tests/integration/: README.md  conftest.py  test_admin_crud.py  test_agent_tools.py  test_authz_sensitive.py  test_face_greet.py  test_inbound_channels.py  test_smoke.py
ui/react/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+108 files in other folders)
