[project]
name = "family-assistant"
version = "0.1.0"
description = "Family Assistant AI — admin console + local AI assistant (Avi)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "cryptography>=43.0.3",
    "pillow>=11.0.0",
    "email-validator>=2.2.0",
    "google-genai>=1.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.24.4",
    "numpy>=2.4.4",
    "httpx>=0.28.1",
    "kokoro-onnx>=0.5.0",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/api"]
