[project]
name = "family-assistant"
version = "0.1.0"
description = "Family Assistant AI — admin console + local AI assistant (Avi)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "cryptography>=43.0.3",
    "pillow>=11.0.0",
    "email-validator>=2.2.0",
    "google-genai>=1.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.24.4",
    "numpy>=2.4.4",
    "httpx>=0.28.1",
    "kokoro-onnx>=0.5.0",
    "soundfile>=0.13.1",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "google-api-python-client>=2.194.0",
    "croniter>=6.2.2",
    "cron-descriptor>=2.0.8",
    # Inbound attachment text extraction. Pillow is already pulled in
    # above for image work; pypdf handles PDFs (pure-Python, no native
    # deps) and python-docx covers Word .docx (XML-only — old binary
    # .doc files are out of scope per spec).
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Pytest is configured without `testpaths` so we don't lock the runner
# at one directory; `pytest tests/integration`, `make test-integration`,
# and bare `pytest` from the repo root all work. The project's
# "ad-hoc only" integration-testing policy is enforced by the absence
# of any automated runner (no CI step, no pre-commit hook), not by
# making the tests hard to invoke.
[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Pydantic v1-style class-based Config in two routers; pre-existing,
    # silenced so it doesn't drown real warnings.
    "ignore::pydantic.PydanticDeprecatedSince20",
]

[tool.hatch.build.targets.wheel]
packages = ["python/api"]
